footer icon spacing fixed

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -14,10 +14,6 @@
     justify-content: center;
 }
 
-.footer-grid-icons-itmes {
-    flex-grow: 1;
-}
-
 .footer img{
     width: 50px;
 }
